syntax = "proto3";

package eleviopb;

message Article {

    message AUTHOR {
        string name = 1;
        double id = 2;
        string gravatar = 3;
        string email = 4;
    }

    message TRANSLATION {
        string updated_at = 1;
        string title = 2;
        string summary = 3;
        string machine_summary = 4;
        string language_id = 5;
        double id = 6;
        string featured_image_url = 7;
        string created_at = 8;
        string body = 9;
    }

    message REVISION {
        string updated_at = 1;
        repeated TRANSLATION translations = 2;
        string status = 3;
        string source = 4;
        repeated string smart_groups = 5;
        double order = 7;
        string notes = 8;
        AUTHOR last_publisher = 9;
        string last_published_at = 10;
        repeated string keywords = 11;
        double id = 12;
        string external_id = 13;
        string editor_version = 14;
        string created_at = 15;
        repeated AUTHOR contributors = 16;
        double category_id = 17;
        AUTHOR author = 18;
        repeated string access_groups = 19;
        repeated string access_emails = 20;
        repeated string access_domains = 21;
        string access = 22;
    }

    string updated_at = 1;
    repeated TRANSLATION translations = 2;

    string title = 3;
    string status = 4;
    string source = 5;
    repeated string smart_groups = 6;
    double order = 8;
    string notes = 9;
    AUTHOR last_publisher = 10;
    string last_published_at = 11;
    repeated string keywords = 12;
    int32 id = 13;
    string external_id = 14;
    string editor_version = 15;
    string created_at = 16;
    repeated AUTHOR contributors = 17;
    double category_id = 18;
    REVISION revision = 7;
    AUTHOR author = 19;
    repeated string access_groups = 20;
    repeated string access_emails = 21;
    repeated string access_domains = 22;
    string access = 23;
    repeated string category_groups = 24;
    repeated string subcategory_groups = 25;
    repeated string article_groups = 26;
    string revision_status = 27;
    bool has_revision = 28;
}


message ArticleList {
    repeated Article articles = 1;
    int32 page_number = 2;
    int32 page_size = 3;
    int32 total_pages = 4;
    int32 total_entries = 5;
}

message ArticleSingle {
    Article article = 1;
}

message SearchResults {
    string query_term = 1;
    int32 total_results = 2;
    int32 total_pages = 3;
    int32 page_number = 4;
    int32 count = 5;

    message RESULTS {
        int32 id = 1;
        string title = 2;
        double category_id = 3;
    }

    repeated RESULTS results = 6;
    int32 current_page = 7;
    double page_size = 8;
}
